public/stylesheets/snorby.css
/* @group Format */

div.dialog {
	width: 500px;
	padding: 0 4em;
	text-align: center;
	margin: 10px auto;
}


#loading{
	float: left;
	margin-top: -25px;
	display: inline;
	margin-left: 62px;
}

#loading_sensor{
	float: left;
	margin-top: -25px;
	display: inline;
	margin-left: 125px;
}

#loading_dash{
	float: left;
	display: inline;
	margin-right: 5px;
	margin-top: -4px;
}

.move_right{
	float: right;
	font-size: small;
}

.always_show_above{
	visibility: visible;
	overflow: visible;
	display: inline-block;
	position: relative;
	clear: both;
}

.destroy_image{
}

.small{
	font-size: x-small;
	margin-top: 5px;
	margin-right: 5px;
}

.move_image_right img{
	padding-right: 5px;
}

.box{
	background: #edf2ef;
	border: 1px solid #bdc0c0;
	margin-bottom: -5px;
	padding: 5px;
	color: rgb(51, 51, 51);
	font: normal normal normal 12px/normal 'Lucida Grande', Helvetica, Arial, Verdana, sans-serif;
	height: 17px;
}

.back{
	font-size: small;
	float: left;
	margin-right: 5px;
	color: rgb(51, 51, 51);
	font: normal normal normal 12px/normal 'Lucida Grande', Helvetica, Arial, Verdana, sans-serif;
}

.auto_complete {
	font-size: x-small;
	color: #2a2a2a;
	background-color: #fefebe;
	overflow-x: hidden;
	max-height: 250px;
	border: 1px solid #a0a0a0;
	display: block;
	margin-bottom: 10px;
}

#filter_box input{
	-webkit-border-radius: 4px;
	-moz-border-radius: 5px;
	background-color: #fefcb9;
	border: 1px solid #fef989;
	color: #535353;
}

#back_button{
	float: right;
}

.kindof_round{
	-moz-border-radius-bottomleft: 5px;
	-webkit-border-top-right-radius: 5px;
}

.round{
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
}

.not_round{
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
}

/* Resets */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-weight: inherit;
	font-style: inherit;
	font-size: 100%;
	font-family: inherit;
}
:focus {
	outline: 0;
}

tbody{
	border-color: inherit;
	display: table-row-group;
	vertical-align: middle;
}

input, textarea{
	color: initial;
	display: inline-block;
	font: -webkit-small-control;
	letter-spacing: normal;
	line-height: normal;
	margin: 0em;
	text-align: -webkit-auto;
	text-indent: 0px;
	text-shadow: none;
	text-transform: none;
	word-spacing: normal;
}

input#user_website, #email, #user_company {
	border:1px solid #ccc;
    padding:5px;
	font-size: large;
}

input#user_login, #user_email, #user_session_login, #user_session_password, #user_password, #user_password_confirmation{
	border:1px solid #ccc;
    padding:5px;
	font-size: x-large;
}

input, select, textarea{
	background: #edf2ef;
	border: 1px solid #bdc0c0;
	color: rgb(51, 51, 51);
	font: normal normal normal 12px/normal 'Lucida Grande', Helvetica, Arial, Verdana, sans-serif;
	margin: 0px;
	padding: 5px;
}

input:focus, select:focus, textarea:focus{
	background: #faffb4;
	border: 1px solid #bdc0c0;
	color: rgb(51, 51, 51);
	font: normal normal normal 12px/normal 'Lucida Grande', Helvetica, Arial, Verdana, sans-serif;
	margin: 0px;
	padding: 5px;
}

input[type=hidden]{
	border-style: none;
	background-color: #fff;
	visibility: hidden;
	display: none;
}

ol, ul {
	list-style: none;
}
table {
	border-collapse: separate;
	border-spacing: 0;
}
div {
	display: block;
}
caption, th, td {
	text-align: left;
	font-weight: normal;
}
blockquote:before, blockquote:after, q:before, q:after {
	content: "";
}
blockquote, q {
	quotes: "" "";
}
blockquote {
	line-height: 1.2em;
	font-style: italic;
	padding: 20px 20px 20px 60px;
	margin: 20px 0;
	background: url(images/quote.png) no-repeat 0 0;
}
acronym {
	cursor: help;
	border-bottom: 1px dashed #333;
}
strong {
	font-weight: bold;
}
em {
	font-style: italic;
}
hr {
	display: none;
}
.right {
	float: right;
}
.left {
	float: left;
}
.hide {
	display: none;
}
 
.clear {
  clear: both;
  height: 0;
  overflow: hidden;
}
 
.clearfix:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}
 
.clearfix {
	display: block;
}
 
html[xmlns] .clearfix {
	display: block;
}
 
* html .clearfix {
	height: 1%;
}
 
a img {
  border: none;
}
 
a {
  color: #505051;
	font-weight: normal;
	font-style: normal;
	text-decoration: none;
	font-variant: normal;
}

a:hover {
  	color: #7e8884;
	font-weight: normal;
	font-style: normal;
	text-decoration: underline;
	font-variant: normal;
}

body {
  background-color: #ededed;
  font-family: Verdana, Helvetica, Arial;
  font-size: 14px;
}

/* @end */

/* @group Tables */

.grid td{
}

.grid tr:hover{
	background-color: rgba(237,237,237,0.64);
}

.grid a{
	color: #1f00ff;
	font-size: x-small;
	font-variant: normal;
	text-decoration: none;
	font-weight: normal;
	font-style: normal;
}

tr.odd {
	
}

tr.even {
	background-color: rgba(205,241,250,0.33);
}

th {
	font-size: x-small;
}

td, tr {
	font-size: x-small;
}

table.form td{
	padding: 5px;
}

#more_menu_holder{
	width: 700px;
	display: inline-block;
	text-align: center;
	margin: -10px auto 10px 100px;
}

#more_menu_holder a{
	font-variant: normal;
	text-decoration: none;
	font-weight: normal;
	font-style: normal;
}

.more_error{
	float: left;
	margin-right: 5px;
}

#more_information_in {
	border: 5px solid #faffbb;
	overflow: hidden;
	margin-top: 10px;
}

#more_information table {
	text-align: left;
	width: 100%;
	font-size: small;
}

#more_information td {
	text-align: left;
	padding-top: 2px;
	padding-bottom: 2px;
	padding-left: 20px;
}

#more_information tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#more_information th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #faffbb;
	font-size: x-small;
}
/* ... */

